# setiastrosuitepro

./: .gitattributes  .gitignore  List_of_Galaxies_with_Distances_Gly.csv  OPTIMIZATIONS.md  PUBLISHING.md  README.docx  README.md  README_LINE_ENDINGS.md  abe.py  aberration_ai.py  aberration_ai_preset.py  accel_installer.py  add_stars.py  astrobin_exporter.py  astrobin_filters_page1_local.csv  astrosuitepro.icns  batch_convert.py  blemish_blaster.py  bundles.py  bundles_dock.py  cali2.csv  cali2color.csv  check_lang.py  check_undefined.py  context_list.txt  contexts.json  convo.py  convo_preset.py  cosmicclarity.py  create_dmg.sh  curve_editor_pro.py  curves_preset.py  debayer.py  detected_stars.csv  disable_zfpy.py  dnd_mime.py  fits_header_data.csv  fitsmodifier.py  fix_importlib_metadata.py  frequency_separation.py  (+56 more)
data/catalogs/: test.csv  (+5 more)
imageops/: mdi_snap.py  scnr.py  starbasedwhitebalance.py  stretch.py
legacy/: __init__.py  image_manager.py  numba_utils.py  xisf.py
ops/: __init__.py  command_help_dialog.py  command_runner.py  commands.py  export_requirements.py  prime_matplotlib_cache.py  script_editor.py  scripts.py  settings.py  write_build_info.py
pro/: __init__.py  abe.py  abe_preset.py  aberration_ai.py  aberration_ai_preset.py  accel_installer.py  accel_workers.py  add_stars.py  astrobin_exporter.py  astrospike.py  astrospike_python.py  autostretch.py  backgroundneutral.py  batch_convert.py  batch_renamer.py  blemish_blaster.py  blink_comparator_pro.py  cheat_sheet.py  clahe.py  comet_stacking.py  config.py  continuum_subtract.py  convo.py  convo_preset.py  copyastro.py  cosmicclarity.py  cosmicclarity_preset.py  crop_dialog_pro.py  crop_preset.py  curve_editor_pro.py  curves_preset.py  debayer.py  debug_utils.py  dnd_mime.py  doc_manager.py  exoplanet_detector.py  file_utils.py  fitsmodifier.py  frequency_separation.py  function_bundle.py  (+71 more)
qml/: ResourceMonitor.qml
scripts/: FITS_Sorter.py  HDR_Blender.py  Hubble_Palette_from_Dual-Band_OSC.py  LRGB_NB_Combiner(1).py  LRGB_NB_Combiner.py  Mono_Camera_Preprocessing.py  Multi_Frame_Photometry.py  NBExtractor_Wp.py  NB_2_RGB.py  NINA_ImageMetaData.py  OSC_Camera_Preprocessing_AstroAlign.py  SASPro_Stacking_Cleanup.py  Seestar_Preprocessing_AstroAlign.py  Spectral_Line_Analyzer.py  Starfield_Quality_Analyzer(1).py  Starfield_Quality_Analyzer.py  Variable_Star_Flux_Tracker.py  VeraLux — HyperMetric Stretch-OK.py  Veralux_HyperMetric_Stretch_v1.3.1.py  Veralux_StarComposer_v1.0.2.py  __init__.py  astrospike_script.py  functionbundlesample.py  init.py  iotest.py  noFilterHeader.py  readme  sample_average_two_docs_ui.py  sample_invert.py  sample_star_preview_ui.py
(+339 files in other folders)
