[tool.poetry]
name = "setiastrosuitepro"
version = "1.10.4"
description = "Seti Astro Suite Pro - Advanced astrophotography toolkit for image calibration, stacking, registration, photometry, and visualization"
authors = ["Franklin Marek <info@setiastro.com>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://www.setiastro.com"
repository = "https://github.com/setiastro/setiastrosuitepro"
keywords = ["astrophotography", "astronomy", "image-processing", "photometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
packages = [{include = "setiastro", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# numeric & scientific
numpy = "*"
scipy = "*"
pywavelets = "*"
matplotlib = "*"
plotly = "*"
exifread = "*"
lightkurve = "*"
oktopus = "*"

# tables & I/O
pandas = "*"
tifffile = "*"
Pillow = "*"

# networking & web
requests = "*"
astroquery = "*"

# compression
lz4 = "*"
zstandard = "*"
imagecodecs = "*"

# astronomy
astropy = "*"
photutils = "*"
astroalign = "*"
sep = "*"
reproject = "*"
tzlocal = "*"
skyfield = "*"
jplephem = "*"

# performance
numba = "*"

#neural net
onnx = "*"
# Use GPU version on Linux, DirectML on Windows, CPU version on macOS/others
# Note: onnxruntime-gpu includes CUDA support and also provides CPUExecutionProvider as fallback
# You cannot install both onnxruntime and onnxruntime-gpu simultaneously
"onnxruntime-gpu" = {version = "*", markers = "sys_platform == 'linux'"}
"onnxruntime-directml" = {version = "*", markers = "sys_platform == 'win32'"}
onnxruntime = {version = "*", markers = "sys_platform != 'linux' and sys_platform != 'win32'"}

# image formats & camera raw
xisf = "*"
rawpy = "*"
imageio = "*"

# utilities
pytz = "*"
py-cpuinfo = "*"

# GUI
PyQt6 = "*"
pyqtgraph = "*"

# system
psutil = "*"

# computer vision
opencv-python-headless = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
# Optional extras can be added here if needed in the future

[tool.poetry.scripts]
setiastrosuitepro = "setiastro.saspro.__main__:main"
cosmicclarity = "setiastro.saspro.cli:main"
saspro-export-requirements = "ops.export_requirements:main"
saspro-write-build-info = "ops.write_build_info:main"
saspro-prime-matplotlib-cache = "ops.prime_matplotlib_cache:main"

